worker/tests/ui/fetch-wrong-return-type.stderr
error[E0277]: the trait bound `std::string::String: IntoResponse` is not satisfied
 --> tests/ui/fetch-wrong-return-type.rs:3:1
  |
3 | #[event(fetch)]
  | ^^^^^^^^^^^^^^^ the trait `IntoResponse` is not implemented for `std::string::String`
  |
  = help: the following other types implement trait `IntoResponse`:
            worker::Response
            worker::web_sys::Response
  = note: this error originates in the attribute macro `event` (in Nightly builds, run with -Z macro-backtrace for more info)
